Add source/target vertices to edge events to fix sf.net bug 3486775, spotted by Frank Mori Hess.

--- a/README.html
+++ b/README.html
@@ -350,6 +350,8 @@
     <li><b>version 0.8.4</b> (under development): 
     Move to github for source control, and Apache Maven for build,
     contributed by Andreas Schnaiter and Owen Jacobson.
+    Add source/target vertices to edge events to fix sf.net
+    bug 3486775, spotted by Frank Mori Hess.
     </li>
 
     <li><b>version 0.8.3</b> (20-Jan-2012): fix regression in
