Add EdmondsBlossomShrinking algorithm, contributed by Alejandro R. Lopez del Huerto.

--- a/README.html
+++ b/README.html
@@ -352,6 +352,8 @@
     contributed by Andreas Schnaiter and Owen Jacobson.
     Add source/target vertices to edge events to fix sf.net
     bug 3486775, spotted by Frank Mori Hess.
+    Add EdmondsBlossomShrinking algorithm, contributed by
+    Alejandro R. Lopez del Huerto.
     </li>
 
     <li><b>version 0.8.3</b> (20-Jan-2012): fix regression in
@@ -605,6 +607,8 @@
     <li>Robby McKilliam</li>
 
     <li>Yuriy Nakonechnyy</li>
+
+    <li>Alejandro R. Lopez del Huerto</li>
 
   </ul>
 
