--- a/etc/release-process.html
+++ b/etc/release-process.html
@@ -139,7 +139,7 @@
 
 <li>Update the new version number and SVN tag in the build.xml file.
   
-<li>Review the README.html and META-INF/MANIFEST.MF files and update:
+<li>Review the README.md, HISTORY.md, CONTRIBUTORS.md, and META-INF/MANIFEST.MF files and update:
 <ul>
 <li>Version
 <li>Dependencies
@@ -149,7 +149,7 @@
 
 <li>Review/update the bug/feature trackers to make sure they reflect the
 current state.  If there were important bug/feature changes, it is worth
-mentioning them in the README.html release notes.
+mentioning them in the README.md release notes.
 
 <li>Bring dependent libraries (e.g. JGraph) up to date and update
 lib/lib-readme.txt accordingly.
