--- a/jgrapht-core/src/main/java/overview.html
+++ b/jgrapht-core/src/main/java/overview.html
@@ -6,7 +6,7 @@ objects and algorithms. This is an open-source java graph library that supports 
 rich gallery of graphs and is designed to be powerful, extensible and easy to use. 
 <p>
 Visit <a
-href="http://jgrapht.sourceforge.net" target="_top">http://jgrapht.sourceforge.net</a>
+href="http://www.jgrapht.org" target="_top">http://www.jgrapht.org</a>
 to download and to get the latest info on JGraphT.
 </body>
 </html>
