--- a/etc/release-process.html
+++ b/etc/release-process.html
@@ -180,8 +180,7 @@ File Release System.
 <li>Update the website with links to the new downloads, version numbers,
 etc.
 
-<li>Announce the new version in the wiki and mailing lists; also click
-the File Release System notification button.
+<li>Announce the new version in the mailing lists.
 
 <li>Update and commit the version number in HISTORY.md
 to reflect the beginning of development for the next version.
