--- a/etc/release-process.html
+++ b/etc/release-process.html
@@ -185,7 +185,8 @@ etc.
 <li>Update and commit the version number in HISTORY.md
 to reflect the beginning of development for the next version.  Also
 update the version in jgrapht-touchgraph/pom.xml since for whatever
-reason, this one is not done automatically by maven.
+reason, this one is not done automatically by maven.  Finally, remove 
+all existing deprecated methods.
   
 </ol>
 
@@ -200,7 +201,7 @@ reason, this one is not done automatically by maven.
       "http://www.w3.org/Icons/valid-html401" border="0" alt="Valid HTML 4.01!"
       height="31" width="88"></a></td>
 
-      <td width="80%" align="center"><small>© Copyright 2005-2013, by Barak Naveh
+      <td width="80%" align="center"><small>Â© Copyright 2005-2013, by Barak Naveh
       and Contributors. All rights reserved.</small></td>
 
       <td width="10%" align="right"><a href="http://sourceforge.net"><img src=
