--- a/etc/release-process.html
+++ b/etc/release-process.html
@@ -159,7 +159,7 @@ code coverage.
 
 <li>Run all the JUnit tests via <code>mvn test</code>. Fix where necessary.
 
-<li>Run <code>mvn jalopy:format</code> to reformat the code.  
+<li>Reformat all code using Eclipse. 
 
 <li>Commit all work and push to github.
 
