--- a/etc/release-process.html
+++ b/etc/release-process.html
@@ -190,8 +190,7 @@ all existing deprecated methods.
   
 </ol>
   
-<h1><font size="5"><font color="#CC3399">J</font>Graph<font color=
-  "#FFCC00">T</font></font> Notes:</h1><br>
+<h1> Notes:</h1><br>
 <ol>
 
 <li> The release artifacts are signed with private keys. In order to sign
