--- a/etc/release-process.html
+++ b/etc/release-process.html
@@ -180,7 +180,7 @@ File Release System.
 <li>Update the website with links to the new downloads, version numbers,
 etc.
 
-<li>Announce the new version in the mailing lists.
+<li>Announce the new version in the mailing lists: jgrapht-users@lists.sourceforge.net, jgrapht-announce@lists.sourceforge.net
 
 <li>Update and commit the version number in HISTORY.md
 to reflect the beginning of development for the next version.  Also
